# MSGenerator

./: CMakeLists.txt  GenerateFiles.cpp  GenerateFiles.h  MSGeneratorConfig.h.in  SpringInitializr.cpp  SpringInitializr.h  main.cpp
